Version 1.0 Final
=================
- First public release of the module.
- Includes improved search efficiency.

Version 1.01 Final
==================
- Incorporated the calendar functionality added by Will.
- Add start page preference (list view vs calendar view).
- Add submenu (displays 'calendar' or 'list' depending on the start page preference).
- Improve date format handling compatibility (Debianus).

Version 1.02 (unreleased)
=========================
- Change sort order of upcoming events block to ascending (= next events).