@@ -244,4 +244,36 @@ class mod_events_EventHandler extends icms_ipf_Handler {
 		
 		return TRUE;
 	}
+	
+	/**
+	 * Activities that must be conducted after an object is saved.
+	 * 
+	 * @param Event object $obj
+	 */
+	
+	protected function afterSave(& $obj)
+	{		
+		/**		
+		 * Flush the cache for the Events module after adding a new item. This ensures that the index 
+	     * page is kept updated if module caching is enabled.
+		*/
+		
+		global $icmsConfig;
+		$cache_status = $icmsConfig['module_cache'];
+		$module = icms::handler("icms_module")->getByDirname("events", TRUE);
+		$module_id = $module->getVar("mid");
+		
+		// First check if caching is enabled for this module. The cache time is stored in a serialised 
+		// string in config table (module_cache), and is indicated in seconds. Uncached = 0.
+		if ($cache_status[$module_id] > 0) {
+			// As PHP's exec() function is often disabled for security reasons
+			try {
+				exec("find " . ICMS_CACHE_PATH . "/" . "events* -delete &");
+			} catch(Exception $e) {
+				$obj->setErrors($e->getMessage());
+			}
+		}
+		
+		return TRUE;
+	}
 }
