@@ -13,3 +13,4 @@ Version 1.01 Final
 Version 1.02 (unreleased)
 =========================
 - Change sort order of upcoming events block to ascending (= next events).
+- Flush module cache (if enabled) when new event is added to keep index page updated.
